fix screen size overflow

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
   align-items: center;
   height: 100vh;
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 h2 {
@@ -99,6 +101,7 @@ h2 {
 }
 
 footer {
+  display: inline;
   position: absolute;
   bottom: 0;
   right: 0;
